fix(styles): don't always show heading anchor on mobile
It's OK if it's always hidden. It doesn not look good if always visible.

--- a/src/styles/heading.scss
+++ b/src/styles/heading.scss
@@ -20,7 +20,7 @@
       font-size: calc(0.25em + 0.75rem);
     }
 
-    @media (hover: hover) and (prefers-reduced-motion: no-preference) {
+    @media (prefers-reduced-motion: no-preference) {
       @apply opacity-0 transition-opacity ease-out;
     }
   }
